# digital-craftsman

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  justfile  package-lock.json  package.json
.github/workflows/: ci.yml
apps/backend/backend-server/: .gitignore  Cargo.toml  justfile
apps/backend/backend-server/src/: chat.rs  main.rs  search.rs
apps/frontend/: angular.json  justfile  package-lock.json  package.json
apps/frontend/scripts/: generate-pdf.js
apps/frontend/src/: index.html  styles.scss
apps/frontend/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
apps/frontend/src/markdown-files/: about.md
ci/data-pipeline/: Cargo.toml  justfile
ci/data-pipeline/src/: main.rs  qdrant_connector.rs
src/: index.html
src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.module.ts
src/app/components/markdown-preview/: markdown-preview.component.html  markdown-preview.component.spec.ts  markdown-preview.component.ts
src/app/components/resume/: resume.component.html  resume.component.scss  resume.component.ts
src/app/components/tech-skills/: tech-skills.component.html  tech-skills.component.scss
src/markdown-files/: about.md
src/markdown-files/resume/: position_bolig_portal.md  position_software_engineer_in_data.md  position_software_engineer_iot.md  position_student_software_engineer_iot.md  position_test_automation_engineer.md  project_1.md  project_energinet.md  project_facebook_scraping_notifier.md
src/markdown-files/tech-skills/: conceptual.md
(+57 files in other folders)
