[package]
name = "backend-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-governor = "0.5.0"
actix-session = "0.7.2"
actix-web = "4.3.1"
anyhow = "1.0.72"
bytes = "1.5.0"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.19"
qdrant-client = "1.4.0"
reqwest = "0.11.20"
rust-bert = "0.21.0"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
tch = { version = "0.13.0", features = ["download-libtorch"] }
