[package]
name = "backend-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.6"
actix-governor = "0.8.0"
actix-session = "0.10.1"
actix-web = "4.9.0"
anyhow = "1.0.95"
bytes = "1.9.0"
env_logger = "0.11.6"
futures = "0.3.31"
log = "0.4.25"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
